# Podium

./: .gitignore  ADVANCED_OPTIMIZATION_REPORT.md  COMPOSE_OPTIMIZATION_REPORT.md  DEBUG_DESKTOP_UI.md  DESKTOP_UI_CHANGES.md  HOME_SCREEN_UPDATE_SUMMARY.md  MATERIAL3_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README_EN.md  RELEASE_BUILD_GUIDE.md  RUST_AUDIO_PLAYER_INTEGRATION.md  RUST_PLAYER_BUILD_FIX.md  RUST_PLAYER_INTEGRATION.md  RUST_RSS_PARSER_INTEGRATION.md  SIGNING_REPO_SETUP.md  SUBSCRIPTION_IMPORT_EXPORT.md  UI_LAYOUT_GUIDE.md  build_native_macos.sh  gradle.properties  keystore.properties.example  settings.gradle.kts  signing-setup.sh
composeApp/: build.gradle.kts  podium.db  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/opoojkk/podium/: MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/com/opoojkk/podium/audio/: RustAudioPlayer.kt
composeApp/src/androidMain/kotlin/com/opoojkk/podium/platform/: BackHandler.android.kt  Clipboard.android.kt  FileOperations.android.kt  FileSystemUtils.android.kt  PlatformContext.kt  PlatformProviders.android.kt  PlatformType.android.kt  Share.android.kt  SystemUi.kt  ToastHelper.android.kt  UrlOpener.android.kt
composeApp/src/androidMain/kotlin/com/opoojkk/podium/util/: Logger.android.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml  ic_notification_forward.xml  ic_notification_loading.xml  ic_notification_pause.xml  ic_notification_rewind.xml  ic_notification_small.xml
composeApp/src/androidMain/res/values/: ic_launcher_background.xml  strings.xml
composeApp/src/commonMain/composeResources/files/: chinese_podcasts.json
composeApp/src/commonMain/kotlin/com/opoojkk/podium/: App.kt  Greeting.kt  Platform.kt  PodiumEnvironment.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/download/: PodcastDownloadManager.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/navigation/: PodiumDestination.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/platform/: BackHandler.kt  Clipboard.kt  FileOperations.kt  FileSystemUtils.kt  PlatformContext.kt  PlatformProviders.kt  PlatformType.kt  Share.kt  SystemUi.kt  UrlOpener.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/player/: PodcastPlayer.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/presentation/: CategoriesUiState.kt  HomeUiState.kt  PlaylistUiState.kt  PodiumAppState.kt  PodiumController.kt  ProfileUiState.kt  SubscriptionsUiState.kt
composeApp/src/commonMain/kotlin/com/opoojkk/podium/util/: ErrorHandler.kt  Extensions.kt  Logger.kt  Result.kt
composeApp/src/commonTest/kotlin/com/opoojkk/podium/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/opoojkk/podium/: MainViewController.kt  Platform.ios.kt
composeApp/src/jvmMain/kotlin/com/opoojkk/podium/: Main.kt  Platform.jvm.kt  main.kt
composeApp/src/jvmMain/resources/darwin-aarch64/: librust_audio_player.dylib  librust_rss_parser.dylib
composeApp/src/jvmMain/resources/darwin-x86_64/: librust_audio_player.dylib  librust_rss_parser.dylib
composeApp/src/nativeInterop/cinterop/: rustAudioPlayer.def
docs/: ios-run.md
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
podium-audio/: .gitignore  BUILD_REQUIREMENTS.md  BUILD_STATUS.md  Cargo.toml  DEBUGGING.md  MIGRATION.md  README.md  build.sh
podium-audio/.cargo/: config.toml
podium-audio/crates/bindings-android/: Cargo.toml
podium-audio/crates/bindings-android/src/: lib.rs  player.rs
podium-audio/crates/bindings-ios/: Cargo.toml
podium-audio/crates/bindings-ios/src/: lib.rs  player.rs
podium-audio/crates/core/: Cargo.toml
podium-audio/crates/core/src/: callback.rs  error.rs  lib.rs  player.rs  state.rs
podium-audio/crates/decode/: Cargo.toml
podium-audio/crates/decode-symphonia/: Cargo.toml
podium-audio/crates/decode-symphonia/src/: lib.rs
podium-audio/crates/decode/src/: lib.rs
podium-audio/crates/demux/: Cargo.toml
podium-audio/crates/demux-symphonia/: Cargo.toml
podium-audio/crates/demux/src/: lib.rs
podium-audio/crates/player-ffi/: Cargo.toml
podium-audio/crates/player-ffi/src/: lib.rs
podium-audio/crates/renderer/: Cargo.toml
podium-audio/crates/renderer-android/: Cargo.toml
podium-audio/crates/renderer-android/src/: lib.rs  oboe_renderer.rs
podium-audio/crates/renderer-api/: Cargo.toml
podium-audio/crates/renderer-ios/: Cargo.toml
podium-audio/crates/renderer-ios/src/: cpal_renderer.rs  lib.rs
podium-audio/crates/renderer/android/: Cargo.toml
podium-audio/crates/renderer/android/src/: lib.rs  oboe_renderer.rs
podium-audio/crates/renderer/ios/: Cargo.toml
podium-audio/crates/renderer/ios/src/: cpal_renderer.rs  lib.rs
podium-audio/crates/renderer/src/: lib.rs
podium-audio/crates/resampler/: Cargo.toml
podium-audio/crates/resampler/src/: lib.rs
podium-audio/crates/ringbuffer/: Cargo.toml
podium-audio/crates/ringbuffer/src/: lib.rs
podium-audio/crates/source-buffer/: Cargo.toml
podium-audio/crates/source-buffer/src/: lib.rs
podium-audio/crates/transport-http/: Cargo.toml
podium-audio/crates/transport-http/src/: client.rs  download.rs  lib.rs  range_source.rs
rust-audio-player/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  METADATA_USAGE.md  README.md  build.sh
rust-audio-player/.cargo/: config.toml
rust-audio-player/src/: android_load_url_fix.txt  callback.rs  decoder.rs  error.rs  ffi_bindings.rs  http_range_source.rs  http_utils.rs  jni_bindings.rs  jvm_bindings.rs  lib.rs  m4a_smart_source.rs  m4a_streaming.rs  m4a_virtual_faststart.rs  metadata.rs  output_rate.rs  player.rs  streaming_http_source.rs  streaming_source.rs
rust-audio-player/src/android/: mod.rs
rust-audio-player/src/desktop/: mod.rs
rust-audio-player/src/ios/: mod.rs
rust-rss-parser/: .gitignore  Cargo.toml  README.md  build.sh
rust-rss-parser/.cargo/: config.toml
rust-rss-parser/src/: lib.rs
scripts/: rebuild_ios.sh
(+107 files in other folders)
