[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/transport-http",
    "crates/source-buffer",
    "crates/demux-symphonia",
    "crates/decode-symphonia",
    "crates/resampler",
    "crates/ringbuffer",
    "crates/renderer-api",
    "crates/renderer-android",
    "crates/renderer-ios",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/opoojkk/Podium"

[workspace.dependencies]
# Logging
log = "0.4"

# Thread synchronization and safety
parking_lot = "0.12"
once_cell = "1.19"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# HTTP client for streaming
ureq = { version = "2.10", default-features = false, features = ["tls"] }

# JNI for Android and JVM desktop
jni = "0.21"

# Platform-specific audio
oboe = { version = "0.6", features = ["java-interface"] }
cpal = "0.16"
android_logger = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
