[package]
name = "rust-audio-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Logging
log = "0.4"
android_logger = { version = "0.14", optional = true }

# JNI for Android
jni = { version = "0.21", optional = true }

# Thread synchronization and safety
parking_lot = "0.12"
once_cell = "1.19"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# Platform-specific audio
[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6", features = ["java-interface"] }
jni = "0.21"
android_logger = "0.14"

# For iOS/macOS, we use cpal instead of coreaudio-rs to avoid Xcode 15+ bindgen issues
# coreaudio-rs has compatibility issues with Xcode SDK 15.4 (_Float16 not supported)
# Since we're using stub implementations for now, cpal is sufficient
#[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
#core-foundation = "0.9"
#core-foundation-sys = "0.8"
#coreaudio-rs = "0.11"

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
cpal = "0.15"

# Feature flags for conditional compilation
[features]
default = []
android = ["jni", "android_logger"]
ios = []
desktop = []

# Build configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
