[package]
name = "rust-audio-player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Logging
log = "0.4"
android_logger = { version = "0.14", optional = true }

# JNI for Android
jni = { version = "0.21", optional = true }

# Thread synchronization and safety
parking_lot = "0.12"
once_cell = "1.19"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# HTTP client for streaming
ureq = { version = "2.10", default-features = false, features = ["tls"] }

# Platform-specific audio
[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6", features = ["java-interface"] }
jni = "0.21"
android_logger = "0.14"

# Using cpal for iOS/macOS/Windows/Linux
# cpal 0.16+ supports iOS and macOS via CoreAudio backend
# Version 0.16 is required for iOS SDK 18.4+ compatibility (removed AudioSession API)
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "ios"))'.dependencies]
cpal = "0.16"

# Feature flags for conditional compilation
[features]
default = []
android = ["jni", "android_logger"]
ios = []
desktop = []

# Build configuration
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
