[package]
name = "podium-bindings-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI for Android and JVM Desktop bindings
jni = "0.21"

# Our modular crates
podium-core = { path = "../core" }
podium-transport-http = { path = "../transport-http" }
podium-source-buffer = { path = "../source-buffer" }
podium-demux-symphonia = { path = "../demux-symphonia" }
podium-decode-symphonia = { path = "../decode-symphonia" }
podium-resampler = { path = "../resampler" }
podium-ringbuffer = { path = "../ringbuffer" }
podium-renderer-api = { path = "../renderer-api" }

# Synchronization and utilities
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies
podium-renderer-android = { path = "../renderer-android" }
android_logger = "0.14"
ndk-context = "0.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
# Desktop JVM uses cpal renderer (cross-platform)
podium-renderer-ios = { path = "../renderer-ios" }
env_logger = "0.11"
