[package]
name = "podium-bindings-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI for Android and JVM Desktop bindings
jni = "0.21"

# Our modular crates
podium-core = { path = "../core" }
podium-transport-http = { path = "../transport-http" }
podium-source-buffer = { path = "../source-buffer" }
podium-demux-symphonia = { path = "../demux-symphonia" }
podium-decode-symphonia = { path = "../decode-symphonia" }
podium-resampler = { path = "../resampler" }
podium-ringbuffer = { path = "../ringbuffer" }
podium-renderer-api = { path = "../renderer-api" }

# Synchronization and utilities
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"

# Include both renderers, select at compile time via cfg
podium-renderer-android = { path = "../renderer-android", optional = true }
podium-renderer-ios = { path = "../renderer-ios", optional = true }

# Logging backends
android_logger = { version = "0.14", optional = true }
env_logger = { version = "0.11", optional = true }
ndk-context = { version = "0.1", optional = true }

[features]
default = []
android = ["podium-renderer-android", "android_logger", "ndk-context"]
desktop = ["podium-renderer-ios", "env_logger"]
