[package]
name = "podium-decode-symphonia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
podium-core = { path = "../core" }
podium-demux-symphonia = { path = "../demux-symphonia" }
log.workspace = true
symphonia.workspace = true
