[package]
name = "podium-renderer-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
podium-core = { path = "../core" }
podium-renderer-api = { path = "../renderer-api" }
podium-ringbuffer = { path = "../ringbuffer" }
log.workspace = true
parking_lot.workspace = true

# cpal is available on all desktop platforms (macOS, Windows, Linux) and iOS
[target.'cfg(not(target_os = "android"))'.dependencies]
cpal.workspace = true
