[package]
name = "podium-source-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
podium-core = { path = "../core" }
podium-transport-http = { path = "../transport-http" }
log.workspace = true
parking_lot.workspace = true
symphonia.workspace = true
