[package]
name = "podium-renderer-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
podium-core = { path = "../../core" }
podium-renderer = { path = ".." }
podium-ringbuffer = { path = "../../ringbuffer" }
log.workspace = true
parking_lot.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
cpal.workspace = true
